@@ -2,6 +2,9 @@
 
 	* src/native.c: escape argument to native functions
 	(native_eval): eval, apply and eval-proc are properly tail-recursive
+	(native_form_let_seq): Properly tail recursive
+	(native_form_letrec): Properly tail recursive
+	(native_form_let): Properly tail recursive
 
 	* src/load.c: escape argument to native functions
 
